--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
     "firebase": "^8.6.8",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^3.0.4",
