--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.16.2",
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
+    "chat-engine": "^0.9.21",
     "firebase": "^8.6.8",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
+    "react-chat-engine": "^1.10.4",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^3.0.4",
     "react-router-dom": "^5.2.0",
