--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
     "chat-engine": "^0.9.21",
+    "faker": "^5.5.3",
     "firebase": "^8.6.8",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
