--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@tippyjs/react": "^4.2.5",
     "axios": "^0.16.2",
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
@@ -19,9 +20,12 @@
     "react-chat-engine": "^1.10.4",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^3.0.4",
+    "react-hook-form": "^7.10.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sweetalert": "^2.1.2",
+    "tippy.js": "^6.2.5",
+    "uikit": "^3.7.0",
     "uuid": "^8.3.2",
     "web-vitals": "^1.1.2"
   },
